--- a/docs/release/migrate/2.0.0.md
+++ b/docs/release/migrate/2.0.0.md
@@ -159,7 +159,7 @@ Unfortunately, not all required conversions can be done automatically. Do the fo
 #### Project configuration
 
 Most of the project configuration is now in the <span class='file'>metaborg.yaml</span> file.
-The [manual page on configuration](../../references/config/index.md) lists all configuration options.
+The [manual page on configuration](../../reference/config/index.md) lists all configuration options.
 
 * Add/remove compile and source dependencies as needed.
 * Add build configuration, such as Stratego compiler arguments, SDF compiler arguments, external def files, and external JAR files.
@@ -276,7 +276,7 @@ build:
     target: package-xml
 ```
 
-See the [manual page on configuration](../../references/config/index.md) for more information about configuring Ant build steps.
+See the [manual page on configuration](../../reference/config/index.md) for more information about configuring Ant build steps.
 
 #### Eclipse plugin
 
