--- a/docs/release/migrate/2.0.0.md
+++ b/docs/release/migrate/2.0.0.md
@@ -50,8 +50,8 @@ The following files and directories have been moved:
     * Main ESV file must be at <span class='file'>editor/Main.esv</span>. If it does not exist, no packed ESV file will be generated.
     * Packed ESV file: <span class='file'>target/metaborg/editor.esv.af</span>
 * SDF
-    * Definition: <span class='file'>src-gen/syntax/[LanguageName].def</span>
-    * Permissive definition: <span class='file'>src-gen/syntax/[LanguageName]-permissive.def</span>
+    * Definition: <span class='file'>src-gen/sdf3/[LanguageName].def</span>
+    * Permissive definition: <span class='file'>src-gen/sdf3/[LanguageName]-permissive.def</span>
     * Parenthesizer: <span class='file'>src-gen/pp/[LanguageName]-parenthesize.str</span>
     * Parse table: <span class='file'>target/metaborg/sdf.tbl</span>
 * Stratego
