--- a/content/release/note/1.2.0.md
+++ b/content/release/note/1.2.0.md
@@ -99,7 +99,7 @@ We have moved most of our documentation to the doc repository on GitHub. We're s
 
 There are also two new tutorials available:
 
-* [Questionaire language tutorial](/spoofax/tutorials/cg2014/): learn to create a questionaire language. This tutorial was given in a hands-on session at the Code Generation conference in 2014.
+* [Questionaire language tutorial](../../tutorials/cg2014/index.md): learn to create a questionaire language. This tutorial was given in a hands-on session at the Code Generation conference in 2014.
 * [Compiler Construction lab assignments](https://github.com/TUDelft-IN4303/assignments/tree/master/milestone1-editor): a more in-depth tutorial. These are the assignments from our Compiler Construction lab where we teach students to create MiniJava inside Spoofax.
 
 Contributors: Guido Wachsmuth and others
