Document known issue

--- a/content/release/note/2.5.19.md
+++ b/content/release/note/2.5.19.md
@@ -2,6 +2,10 @@
 
 Spoofax 2.5.19 updates several dependencies, and makes several small fixes and improvements to the meta-languages.
 
+## Known Issues
+
+- The project wizard has greyed out `Next` and `Finish` buttons at all times.
+
 ## Added
 
 ### Statix
