Document breaking change in Stratego 2 mix syntax

--- a/content/release/note/2.5.19.md
+++ b/content/release/note/2.5.19.md
@@ -36,6 +36,10 @@ The following dependencies were updated:
 
 - The SPT command runner (`org.metaborg.spt.cmd.Main`) now returns a non-zero exit code (`1`) upon test _failure_ (in addition to _errors_).
 
+### Stratego 2
+
+- Mix syntax with Stratego 2 now requires an addition SDF3 module import of `StrategoLang/core/modules-namespaced`.
+
 ## Fixes
 
 ### 32-bit binary support
