--- a/content/release/migrate/2.0.0.md
+++ b/content/release/migrate/2.0.0.md
@@ -21,7 +21,7 @@ A component contributes these parts to a *language implementation*. Multiple com
 
 Language components can *depend* on other language components to depend on parts of a language. Currently, there are two kinds of dependencies: compile and source dependencies.
 
-A *compile dependency* on a language component is used to compile source files of that language component. For example, a compile dependency on NaBL will ensure that all <span class='file'>.nab</span> files are compiled into <span class='file'>.str</span> files.
+A *compile dependency* on a language component is used to compile source files of that language component. For example, a compile dependency on NaBL will ensure that all `.nab` files are compiled into `.str` files.
 
 A *source dependency* is used to depend on source files of a language component. Source dependencies are used to depend on libraries, for example to depend on a Stratego library for name and type analysis. They are also used to compose multiple language components into a single language component, for example to do language extension.
 
@@ -31,45 +31,45 @@ An *end-user project* is a project with programs of an end-user language, in con
 
 ### Project structure
 
-The project structure of language specification projects has significantly changed. The biggest change is that these projects are no longer Eclipse (plugin) projects, so that they can be used outside of the Eclipse platform as well. Ant build files have also been removed since we do not use Ant to build projects any more. Many ESV files have been deprecated, and all generated ESV files in the <span class='file'>editor</span> directory have been removed.
+The project structure of language specification projects has significantly changed. The biggest change is that these projects are no longer Eclipse (plugin) projects, so that they can be used outside of the Eclipse platform as well. Ant build files have also been removed since we do not use Ant to build projects any more. Many ESV files have been deprecated, and all generated ESV files in the `editor` directory have been removed.
 
 The following files and directories are no longer part of the project structure:
 
-* Ant build: <span class='file'>.externalToolBuilders</span>, <span class='file'>build.generated.xml</span>, <span class='file'>build.main.xml</span>
-* Eclipse plugin: <span class='file'>plugin.xml</span>, <span class='file'>META-INF</span>
-* Eclipse project: <span class='file'>.settings</span>, <span class='file'>.classpath</span>, <span class='file'>.project</span>, <span class='file'>build.properties</span>
-* Refactoring: <span class='file'>lib/refactor-common.generated.str</span>
-* Deprecated ESV files: <span class='file'>editor/langname-Completions.esv</span>, <span class='file'>editor/langname-Folding.esv</span>, <span class='file'>editor/langname-Outliner.str</span>, <span class='file'>editor/langname-Refactorings.esv</span>
-* Generated ESV files: <span class='file'>editor/langname-\*.generated.esv</span>, <span class='file'>editor/langname-Outliner.generated.str</span>
+* Ant build: `.externalToolBuilders`, `build.generated.xml`, `build.main.xml`
+* Eclipse plugin: `plugin.xml`, `META-INF`
+* Eclipse project: `.settings`, `.classpath`, `.project`, `build.properties`
+* Refactoring: `lib/refactor-common.generated.str`
+* Deprecated ESV files: `editor/langname-Completions.esv`, `editor/langname-Folding.esv`, `editor/langname-Outliner.str`, `editor/langname-Refactorings.esv`
+* Generated ESV files: `editor/langname-\*.generated.esv`, `editor/langname-Outliner.generated.str`
 * The RTG and signatures files are no longer generated for SDF3 projects, since SDF3 generates its own signatures.
 * The generated box pp files are no longer generated, and box pp files are no longer converted into pp.af files.
 
 The following files and directories have been moved:
 
 * ESV
-    * Main ESV file must be at <span class='file'>editor/Main.esv</span>. If it does not exist, no packed ESV file will be generated.
-    * Packed ESV file: <span class='file'>target/metaborg/editor.esv.af</span>
+    * Main ESV file must be at `editor/Main.esv`. If it does not exist, no packed ESV file will be generated.
+    * Packed ESV file: `target/metaborg/editor.esv.af`
 * SDF
-    * Definition: <span class='file'>src-gen/syntax/[LanguageName].def</span>
-    * Permissive definition: <span class='file'>src-gen/syntax/[LanguageName]-permissive.def</span>
-    * Parenthesizer: <span class='file'>src-gen/pp/[LanguageName]-parenthesize.str</span>
-    * Parse table: <span class='file'>target/metaborg/sdf.tbl</span>
+    * Definition: `src-gen/syntax/[LanguageName].def`
+    * Permissive definition: `src-gen/syntax/[LanguageName]-permissive.def`
+    * Parenthesizer: `src-gen/pp/[LanguageName]-parenthesize.str`
+    * Parse table: `target/metaborg/sdf.tbl`
 * Stratego
-    * 'editor-common.generated' file: <span class='file'>src-gen/stratego/metaborg.str</span>
-    * Ctree: <span class='file'>target/metaborg/stratego.ctree</span>
-    * Generated Java files: <span class='file'>src-gen/stratego-java</span>
-    * JAR: <span class='file'>target/metaborg/stratego.jar</span>
-    * Java strategies: <span class='file'>src/main/strategies</span>
-    * Java strategies JAR: <span class='file'>target/metaborg/stratego-javastrat.jar</span>
-    * Build cache: <span class='file'>target/stratego-cache</span>
+    * 'editor-common.generated' file: `src-gen/stratego/metaborg.str`
+    * Ctree: `target/metaborg/stratego.ctree`
+    * Generated Java files: `src-gen/stratego-java`
+    * JAR: `target/metaborg/stratego.jar`
+    * Java strategies: `src/main/strategies`
+    * Java strategies JAR: `target/metaborg/stratego-javastrat.jar`
+    * Build cache: `target/stratego-cache`
 * DynSem
-    * Manual Java: <span class='file'>src/main/ds</span>
-    * Generated Java: <span class='file'>src-gen/ds-java</span>
+    * Manual Java: `src/main/ds`
+    * Generated Java: `src-gen/ds-java`
 
 The following generated files and directories still exist, but should not be published to source control any more:
 
-* <span class='file'>lib/editor-common.generated.str</span> or <span class='file'>stratego/metaborg.str</span>
-* <span class='file'>src-gen</span>
+* `lib/editor-common.generated.str` or `stratego/metaborg.str`
+* `src-gen`
 
 When importing a language specification project into Eclipse or IntelliJ, several platform-specific files will be generated. These files should not be published to source control to keep projects as platform-agnostic as possible.
 
@@ -77,7 +77,7 @@ When importing a language specification project into Eclipse or IntelliJ, severa
 
 ##### Importing
 
-To import a language specification project into Eclipse, use <span class='menuselection'>Import... ‣ Maven ‣ Existing Maven Projects</span>. We use Maven to set up the correct Java dependencies, which is why there is no special 'Existing Spoofax Projects' importer.
+To import a language specification project into Eclipse, use `#!gui Import... > Maven > Existing Maven Projects`. We use Maven to set up the correct Java dependencies, which is why there is no special 'Existing Spoofax Projects' importer.
 
 ##### Builds
 
@@ -85,47 +85,47 @@ Eclipse has the concept of incremental project builders, which incrementally par
 
 The project builder for Spoofax parses, analyses, executes transformations, and shows all error markers, for all language files (Stratego files, SDF3 files, files of your language, etc.) in the project. If the project is opened for the first time, a full build will occur, building all language files. When changes occur in the project, an incremental build occurs, building only changed files.
 
-The commands under the <span class='guilabel'>Project</span> menu in Eclipse now also affect Spoofax projects.
-Executing <span class='menuselection'>Project ‣ Build...</span> (or pressing <kbd>Ctrl/Cmd+Alt+B</kbd>) will build the project.
+The commands under the `#!gui Project` menu in Eclipse now also affect Spoofax projects.
+Executing `#!gui Project > Build...` (or pressing <kbd>Ctrl/Cmd+Alt+B</kbd>) will build the project.
 
-Executing <span class='menuselection'>Project ‣ Clean...</span> will delete the <span class='guilabel'>.cache</span> directory, reset the index and task engine, remove all error markers, and reanalyze and rebuild all files in the project. This makes the <span class='guilabel'>Reset and Reanalyze</span> builder unnecessary, since this is now properly integrated with Eclipse.
+Executing `#!gui Project > Clean...` will delete the `#!gui .cache` directory, reset the index and task engine, remove all error markers, and reanalyze and rebuild all files in the project. This makes the `#!gui Reset and Reanalyze` builder unnecessary, since this is now properly integrated with Eclipse.
 
-Automatic building can also be turned off by disabling <span class='menuselection'>Project ‣ Build Automatically</span>. Builds will then only occur if <span class='menuselection'>Project ‣ Build Project</span> is executed or if <kbd>Ctrl/Cmd+Alt+B</kbd> is pressed.
+Automatic building can also be turned off by disabling `#!gui Project > Build Automatically`. Builds will then only occur if `#!gui Project > Build Project` is executed or if <kbd>Ctrl/Cmd+Alt+B</kbd> is pressed.
 
 Furthermore, the language specification build is no longer written in Ant, but in Java using the [Pluto](http://pluto-build.github.io/) incremental build system.
 
 ##### Natures
 
-The Spoofax language specification project builder is not enabled by default, to enable it a 'Spoofax meta nature' must be added to the project. A nature in Eclipse is a project tag which enables functionality for that project. To add the Spoofax nature to a project, right click the project, and choose <span class='menuselection'>Spoofax (meta) ‣ Add Spoofax meta nature</span>.
+The Spoofax language specification project builder is not enabled by default, to enable it a 'Spoofax meta nature' must be added to the project. A nature in Eclipse is a project tag which enables functionality for that project. To add the Spoofax nature to a project, right click the project, and choose `#!gui Spoofax (meta) > Add Spoofax meta nature`.
 When importing a language specification, this nature is automatically added.
 
-For end-user projects, right click the project, and choose <span class='menuselection'>Spoofax ‣ Add Spoofax nature</span> to add a nature for end-user projects.
+For end-user projects, right click the project, and choose `#!gui Spoofax > Add Spoofax nature` to add a nature for end-user projects.
 
 Editors will parse and analyze files regardless of there being a Spoofax nature, but the on-save handler will not be called.
 
 #### Builders
 
-Builders for the open editor are now located in the <span class='guilabel'>Spoofax</span> main menu instead of buttons on the tool bar. Builders wait for the analyzed AST if needed, so the issue where builders are sometimes not executed on the analyzed AST should be solved now.
+Builders for the open editor are now located in the `#!gui Spoofax` main menu instead of buttons on the tool bar. Builders wait for the analyzed AST if needed, so the issue where builders are sometimes not executed on the analyzed AST should be solved now.
 
 Builders can also be executed on a set of files by selecting the files in the project or package explorer, right clicking the files, selecting the language name from the menu, and then selecting a builder.
 
 #### Cancellation
 
-Editor updates can now be cancelled by clicking the red stop button in the progress view. If the progress view is not visible, you can open it by choosing <span class='menuselection'>Window ‣ Show View ‣ Progress</span>. If the editor update is not responsive (it is looping for example), the thread running the editor update will be killed after a while.
+Editor updates can now be cancelled by clicking the red stop button in the progress view. If the progress view is not visible, you can open it by choosing `#!gui Window > Show View > Progress`. If the editor update is not responsive (it is looping for example), the thread running the editor update will be killed after a while.
 
-Killing a thread during analysis may leave the index and task engine in an inconsistent state. If this happens, clean the project using <span class='menuselection'>Project ‣ Clean...</span> to force a full build, which makes the state consistent again. Killing a thread is not very well supported in Java and may break Eclipse or even the JVM, which then requires a restart.
+Killing a thread during analysis may leave the index and task engine in an inconsistent state. If this happens, clean the project using `#!gui Project > Clean...` to force a full build, which makes the state consistent again. Killing a thread is not very well supported in Java and may break Eclipse or even the JVM, which then requires a restart.
 
 Project builds and transformations can also be cancelled in the progress view.
 
 #### Console logging
 
-Console logging in the new plugin is more prominent so that we can diagnose problems more easily. If the console is not visible, you can open it by choosing <span class='menuselection'>Window ‣ Show View ‣ Console</span>. The console does not automatically pop-up when there is a message any more, so it can also be hidden by just closing it.
+Console logging in the new plugin is more prominent so that we can diagnose problems more easily. If the console is not visible, you can open it by choosing `#!gui Window > Show View > Console`. The console does not automatically pop-up when there is a message any more, so it can also be hidden by just closing it.
 
-All warning and error messages are also sent to Eclipse's error log. The error log can sometimes contain more information about exceptions and stack traces in errors. If the error log is not visible, you can open it by choosing <span class='menuselection'>Window ‣ Show View ‣ Error Log</span>.
+All warning and error messages are also sent to Eclipse's error log. The error log can sometimes contain more information about exceptions and stack traces in errors. If the error log is not visible, you can open it by choosing `#!gui Window > Show View > Error Log`.
 
 #### Manually loading/unloading a language
 
-A language can be manually loaded or reloaded by right clicking a project and choosing <span class='menuselection'>Spoofax (meta) ‣ Load language</span>, and unloaded with <span class='menuselection'>Spoofax (meta) ‣ Unload language</span>.
+A language can be manually loaded or reloaded by right clicking a project and choosing `#!gui Spoofax (meta) > Load language`, and unloaded with `#!gui Spoofax (meta) > Unload language`.
 
 #### External dependencies
 
@@ -142,10 +142,10 @@ Otherwise, Spoofax 2.0 supports converting an old Spoofax project into a new Spo
 
 ### Automatic conversion
 
-First, import your existing Spoofax project into Eclipse using <span class='menuselection'>File ‣ Import... ‣ Existing Projects into Workspace</span>.
-Right click the project, and choose <span class='menuselection'>Spoofax (meta) ‣ Upgrade language project</span>. A wizard screen will pop up where you have to fill in some details about your language.
+First, import your existing Spoofax project into Eclipse using `#!gui File > Import... > Existing Projects into Workspace`.
+Right click the project, and choose `#!gui Spoofax (meta) > Upgrade language project`. A wizard screen will pop up where you have to fill in some details about your language.
 
-If a <span class='file'>packed.esv</span> file was found, Spoofax will try to fill in some fields for you. If not, all fields need to be filled in manually. The *id* and *name* of your language can be found in the main ESV file. For *group id*, use a Maven identifier for your organization (e.g. org.metaborg), and as *version*: 1.0.0-SNAPSHOT.
+If a `packed.esv` file was found, Spoofax will try to fill in some fields for you. If not, all fields need to be filled in manually. The *id* and *name* of your language can be found in the main ESV file. For *group id*, use a Maven identifier for your organization (e.g. org.metaborg), and as *version*: 1.0.0-SNAPSHOT.
 
 !!! warning
     Make sure that the *id* and *name* fields match exactly with the fields in your ESV file, otherwise the conversion will go wrong.
@@ -158,7 +158,7 @@ Unfortunately, not all required conversions can be done automatically. Do the fo
 
 #### Project configuration
 
-Most of the project configuration is now in the <span class='file'>metaborg.yaml</span> file.
+Most of the project configuration is now in the `metaborg.yaml` file.
 The [manual page on configuration](../../references/config/index.md) lists all configuration options.
 
 * Add/remove compile and source dependencies as needed.
@@ -181,7 +181,7 @@ In Stratego, NaBL, and TS files:
 
 #### SDF
 
-If you are still using SDF2 instead of SDF3, add the following setting to the <span class='file'>metaborg.yaml</span> file:
+If you are still using SDF2 instead of SDF3, add the following setting to the `metaborg.yaml` file:
 
 ```yaml
 language:
@@ -193,8 +193,8 @@ language:
 
 If you’re using a NaBL/TS based analysis, perform the following changes:
 
-* NaBL files are now generated into <span class='file'>src-gen/names</span>, fix imports to NaBL files, delete old generated NaBL files.
-* TS files are now generated into <span class='file'>src-gen/types</span>, fix imports to TS files, delete old generated TS files.
+* NaBL files are now generated into `src-gen/names`, fix imports to NaBL files, delete old generated NaBL files.
+* TS files are now generated into `src-gen/types`, fix imports to TS files, delete old generated TS files.
 * The `editor-analyze` calls have been changed. Remove `analysis-single-default-interface`, `analysis-multiple-default-interface`, and `editor-analyze`. Replace it with:
 ```str
 editor-analyze = analyze-all(pre-analysis, post-analysis, pp-message|<language>)
@@ -209,11 +209,11 @@ with the `pre-analysis`, `post-analysis`, and `pp-message` arguments that you we
 #### ESV
 
 * The following ESV files are now deprecated, delete and remove any imports to these files:
-    * <span class='file'>editor/langname-Completions.esv</span>
-    * <span class='file'>editor/langname-Folding.esv</span>
-    * <span class='file'>editor/langname-Refactorings.esv</span>
-* Previously generated ESV files in the <span class='file'>editor</span> directory are not generated any more. Delete the generated files and remove the imports to generated files.
-* The colorer ESV file is now generated to <span class='file'>src-gen/editor/Colorer.generated.esv</span>, import it with `imports editor/Colorer.generated` in an ESV file.
+    * `editor/langname-Completions.esv`
+    * `editor/langname-Folding.esv`
+    * `editor/langname-Refactorings.esv`
+* Previously generated ESV files in the `editor` directory are not generated any more. Delete the generated files and remove the imports to generated files.
+* The colorer ESV file is now generated to `src-gen/editor/Colorer.generated.esv`, import it with `imports editor/Colorer.generated` in an ESV file.
 * The generated syntax ESV file is no longer generated. If you were using the defaults from the generated file, add them to an ESV file:
 ```esv
 language
@@ -222,8 +222,8 @@ language
   block comment : "/*" * "*/"
   fences        : [ ] ( ) { }
 ```
-* The outliner (<span class='file'>editor/langname-Outliner.str</span>) must be moved to the <span class='file'>trans</span> directory. Rename it to <span class='file'>trans/outline.str</file>, change its module to `outline`, and fix imports of the outliner.
-* Change the file name of the main ESV file to <span class='file'>Main.esv</span>, and change its module to `Main`.
+* The outliner (`editor/langname-Outliner.str`) must be moved to the `trans` directory. Rename it to <span class='file'>trans/outline.str</file>, change its module to `outline`, and fix imports of the outliner.
+* Change the file name of the main ESV file to `Main.esv`, and change its module to `Main`.
 * In the main ESV file:
     * Change the parse table:
     ```esv
@@ -248,22 +248,22 @@ language
 
 If your project has Java strategies:
 
-* Create the <span class='file'>src/main/strategies</span> directory.
-* Move Java strategies from <span class='file'>editor/java</span> into the <span class='file'>src/main/strategies</span> directory. Be sure to preserve the existing Java package structure.
-* Perform a Maven update by right clicking the project and choosing <span class='menuselection'>Maven ‣ Update Project...</span>, to update the Java source directories of the project.
+* Create the `src/main/strategies` directory.
+* Move Java strategies from `editor/java` into the `src/main/strategies` directory. Be sure to preserve the existing Java package structure.
+* Perform a Maven update by right clicking the project and choosing `#!gui Maven > Update Project...`, to update the Java source directories of the project.
 
 #### DynSem
 
 If your project has manual DynSem Java files:
 
-* Create the <span class='file'>src/main/ds</span> directory.
-* Move manual DynSem Java files from <span class='file'>editor/java</span> into the <span class='file'>src/main/ds</span> directory. Be sure to preserve the existing Java package structure.
-* Perform a Maven update by right clicking the project and choosing <span class='menuselection'>Maven ‣ Update Project...</span>, to update the Java source directories of the project.
+* Create the `src/main/ds` directory.
+* Move manual DynSem Java files from `editor/java` into the `src/main/ds` directory. Be sure to preserve the existing Java package structure.
+* Perform a Maven update by right clicking the project and choosing `#!gui Maven > Update Project...`, to update the Java source directories of the project.
 
 #### Ant build customization
 
-Language specification builds do not use Ant any more, so any customizations to the <span class='file'>build.main.xml</span> are lost.
-To perform an Ant task before and after the build, add the following configuration option to your <span class='file'>metaborg.yaml</span> file:
+Language specification builds do not use Ant any more, so any customizations to the `build.main.xml` are lost.
+To perform an Ant task before and after the build, add the following configuration option to your `metaborg.yaml` file:
 
 ```yaml
 build:
@@ -284,7 +284,7 @@ Language specification projects are not Eclipse plugins anymore.
 
 #### Git
 
-If you're using Git, the <span class='file'>.gitignore</span> file is replaced with a new one, add entries that you need again.
+If you're using Git, the `.gitignore` file is replaced with a new one, add entries that you need again.
 All generated files that were previously not ignored, are ignored now. To delete all ignored files from the Git index (the files will remain on the filesystem but Git will forget about them), make sure all your useful changes are committed and pushed, then run the following commands:
 
 ```bash
@@ -295,6 +295,6 @@ git commit -am "Remove ignored files"
 
 #### Building
 
-When you are done with converting the project, build it with <kbd>Cmd+Shift+B</kbd> or <span class='menuselection'>Project ‣ Build</span>.
-If the build does not work, try cleaning the project first with <span class='menuselection'>Project ‣ Clean<span>, and then building again.
-Also make sure that <span class='menuselection'>Project ‣ Build Automatically</span> is turned on.
+When you are done with converting the project, build it with <kbd>Cmd+Shift+B</kbd> or `#!gui Project > Build`.
+If the build does not work, try cleaning the project first with <span class='menuselection'>Project > Clean<span>, and then building again.
+Also make sure that `#!gui Project > Build Automatically` is turned on.
