--- a/content/release/note/2.5.20.md
+++ b/content/release/note/2.5.20.md
@@ -1,6 +1,6 @@
 # Spoofax 2.5.20 (12-04-2023)
 
-Spoofax 2.5.20 updates multiple dependencies, rearranges some, fixes a bug in the new porject wizard, and makes small fixes and improvements to Statix.
+Spoofax 2.5.20 updates multiple dependencies, rearranges some, fixes a bug in the new project wizard, and makes small fixes and improvements to Statix.
 
 ## Fixes
 
