Update 2.5.21 dep changes

--- a/content/release/note/2.5.21.md
+++ b/content/release/note/2.5.21.md
@@ -1,6 +1,6 @@
 # Spoofax 2.5.21 (23-07-2023)
 
-Spoofax 2.5.21 updates multiple dependencies, fixes a few bugs, and introduces a new required field in the `metaborg.yaml` file.
+Spoofax 2.5.21 updates multiple dependencies, fixes a few bugs, and introduces a new required field in the `metaborg.yaml` file. Notably, `guice` is now updated from 5.1.0 to 7.0.0. This is the last release that is compatible with 5.1.0.
 
 See the corresponding [migration guide](../migrate/2.5.21.md) for migrating from Spoofax 2.5.20 (or below) to Spoofax 2.5.21.
 
@@ -10,8 +10,6 @@ See the corresponding [migration guide](../migrate/2.5.21.md) for migrating from
 - `RuleUtil.inline` now inserts equalities for ascribed values
 - Rule names are now unique across files
 - List origins are now tracked, fixing spurious failure in NaBL2 solver
-
-## Added
 
 ## Changes
 - The value of `metaborgVersion` in `metaborg.yaml` is no longer hardcoded and must be specified explicitly in the `metaborg.yaml` file of a language project. See the migration guide.
@@ -24,6 +22,10 @@ See the corresponding [migration guide](../migrate/2.5.21.md) for migrating from
 - `com.fasterxml.jackson.core:jackson-databind`: 2.14.0 -> 2.17.1
 - `com.fasterxml.jackson.core:jackson-annotations`: 2.14.0 -> 2.17.1
 - `com.fasterxml.jackson.dataformat:jackson-dataformat-yaml`: 2.14.0 -> 2.17.1
+- `org.immutables:value`: 2.8.8 -> 2.10.1
+- `com.google.inject:guice`: 5.1.0 -> 7.0.0
+- `com.google.inject.extensions:guice-multibindings`: 5.1.0 -> 7.0.0
+- `com.google.inject.extensions:guice-assistedinject`: 5.1.0 -> 7.0.0
 
 {% from 'downloads.md' import downloads with context %}
 {{ downloads('2.5.21') }}
