--- a/content/release/note/2.5.21.md
+++ b/content/release/note/2.5.21.md
@@ -1,6 +1,6 @@
-# Spoofax 2.5.21 (23-07-2023)
+# Spoofax 2.5.21 (23-07-2024)
 
-Spoofax 2.5.21 updates multiple dependencies, fixes a few bugs, and introduces a new required field in the `metaborg.yaml` file. Notably, `guice` is now updated from 5.1.0 to 7.0.0. This is the last release that is compatible with 5.1.0.
+Spoofax 2.5.21 updates multiple dependencies, fixes a few bugs, and introduces a new required field in the `metaborg.yaml` file. Notably, `guice` is now updated from version 5.1.0 to 7.0.0. This is the last release that is compatible with 5.1.0.
 
 See the corresponding [migration guide](../migrate/2.5.21.md) for migrating from Spoofax 2.5.20 (or below) to Spoofax 2.5.21.
 
