Fix title in spoofax 2.5.23 release notes, add missing downloads section last two releases, add notes for upcoming release

--- a/content/release/note/2.5.22.md
+++ b/content/release/note/2.5.22.md
@@ -11,3 +11,6 @@ This change only impacts users that distribute Java projects that depend on part
 ### Dependencies
 
 - Removed `java.inject:java.inject:1` as a direct dependency.
+
+{% from 'downloads.md' import downloads with context %}
+{{ downloads('2.5.22') }}
