--- a/content/release/note/2.5.23.md
+++ b/content/release/note/2.5.23.md
@@ -1,8 +1,11 @@
-# Spoofax vNext
+# Spoofax 2.5.23 (28-04-2025)
 
-Spoofax 2.5.22 is a small release that adds additional options for defining concrete object syntax for Stratego 2. Stratego 2 code generation is also adapted in preparation for experiments to improve performance.
+Spoofax 2.5.23 is a small release that adds additional options for defining concrete object syntax for Stratego 2. Stratego 2 code generation is also adapted in preparation for experiments to improve performance.
 
 ## Changes
 
 - Stratego 2 now accepts constructors that start with `StrategoToMetaExpr`/`StrategoToTerm`/`StrategoMetaVar` in concrete object syntax.
 - Stratego 2 now generates static `callStatic` methods in `Strategy` class objects, and calls those in the `invoke` method. In the future, we will test an optimisation where static strategy calls in Stratego code are translated to static method calls on the JVM.
+
+{% from 'downloads.md' import downloads with context %}
+{{ downloads('2.5.23') }}
